# textual-forms

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
examples/: basic_form.py  example_form.py
src/textual_forms/: __init__.py  buttons.py  fields.py  forms.py  validators.py
