[tool.poetry]
name = "textual-forms"
license = { text = "MIT" }
version = "0.1.0"
description = "Dynamic forms for Textual TUI Framework"
keywords = ["tui", "terminal", "form", "widget"]
authors = ["Lemuel Boyce <lemuelboyce@gmail.com>"]
readme = "README.md"
packages = [{ include = "src/textual_compose" }]
dependencies = ["textual >=0.4.0"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7"
textual = { extras = ["dev"], version = "^0.4.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

